--- a/testTask/ru.lproj/Localizable.strings
+++ b/testTask/ru.lproj/Localizable.strings
@@ -8,12 +8,17 @@
 "attention" = "Внимание";
 "OK" = "OK";
 
+"forgotPasswordText" = "Кажется, вы забыли пароль..?";
+"registerText" = "Доступно только в платной версии";
+
 "Authorization" = "Авторизация";
 "login" = "Войти";
 "createNewAccount" = "У меня еще нет аккаунта. Создать.";
 "forgotPassword" = "Забыли пароль?";
 "email" = "Почта";
 "password" = "Пароль";
+
+"temp" = "Температура в Петербурге";
 
 "EmailHasWrongFormat" = "Почта введена неверно";
 "PasswordHasWrongFormat" = "Пароль введен неверно";
